--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,24 +219,23 @@ pre {
 }
 
 /* jay custom css */
-.portfolio_hover_jay  {
+.thumbImg_jay  {
+    position: relative;
+    bottom: -100%;
+}
+
+.thumbImg_jay:hover {
+    /* opacity: 1; */
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 0;
-    right: 0;
     bottom: 0;
-    left: 0;
     margin: 0;
     -webkit-transition: all .3s;
             transition: all .3s; 
-    opacity: 0;
+    opacity: 1;
     border: 20px solid rgba(0, 0, 0, .1);
     background-color: rgba(255, 255, 255, .9);
-}
-
-.portfolio_hover_jay:hover {
-    opacity: 1;
 }
 /* end of jay custom css */
 
