--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,6 @@ pre {
 .portfolio_hover_jay {
     position: relative;
     opacity: 0;
-    /* bottom: -100%; */
 }
 
 .portfolio-description{
@@ -233,8 +232,15 @@ pre {
     display: block;    
 }
 
+i.icon-basic_link {
+    font-size: 35px;
+}
+
 .thumb:hover .portfolio_hover_jay {
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     bottom: 0;
