--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -862,7 +862,7 @@ i.icon-basic_link {
 .menuzord-menu > li {
     display: inline-block;
     float: left;
-    margin-left: 2px;
+    /* margin-left: 2px; */
 }
 
 .menuzord-menu > li > a {
@@ -6203,7 +6203,7 @@ Table of contents
         width: 100%;
     }
     .menuzord-responsive .menuzord-menu.scrollable {
-        overflow-y: auto;
+        /* overflow-y: auto; */
         -webkit-overflow-scrolling: touch;
     }
     .menuzord-responsive .menuzord-menu.scrollable > .scrollable-fix {
